Switch to Arduino Leonardo base

--- a/smartpoi.config
+++ b/smartpoi.config
@@ -1,2 +1,3 @@
 // Definitions below are used by qtcreator code parser
-#include <avr/iom328p.h>
+//#include <avr/iom328p.h>
+#include <avr/iom32u4.h>
